Fixed bug 'overflow-x: hidden'

--- a/style/pixelbite.css
+++ b/style/pixelbite.css
@@ -566,13 +566,17 @@ img {
         justify-content: center;
         align-items: center;
     }
+}
+
+@media only screen and (max-width: 900px) {
+    * {
+        overflow-x: hidden;
+    }
 
     .sticky {
         position: relative;
     }
-}
 
-@media only screen and (max-width: 900px) {
     .dashboard {
         display: flex;
         justify-content: center;
